<resources>
    <string name="app_name">Chấm Công</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_nav">NavActivity</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_old_pass">Mật khẩu cũ</string>
    <string name="input_new_pass">Mật khẩu mới</string>
    <string name="input_email">Nhập email của bạn</string>
    <string name="input_code">Nhập code của bạn</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="back_to_login">Quay lại đăng nhập</string>
    <string name="send">NHẬN MÃ XÁC THỰC</string>
    <string name="error">Chức năng này tạm thời chưa có</string>
    <string name="nhapmatkhau">Nhập mật khẩu của bạn</string>
    <string name="hovaten">Họ và tên:</string>
    <string name="chucvu">Chức vụ:</string>
    <string name="ngaynghi">Ngày nghỉ</string>
    <string name="ngaylamlai">Ngày làm lại:</string>
    <string name="lydo">Lý do:</string>
    <string name="ok">OK</string>
    <string name="checkin">Điểm danh</string>
    <string name="nhatkychamcong">Nhật Ký Chấm Công</string>
    <string name="daymonth">Ngày - tháng</string>
    <string name="giovao">Giờ vào</string>
    <string name="giora">Giờ ra</string>
    <string name="sogio">Số giờ</string>
    <string name="xinnghiphep">XIN NGHỈ PHÉP</string>
    <string name="loainghiphep">Loại nghỉ phép:</string>
    <string name="lidonghiphep">Lý do nghỉ phép:</string>
    <string name="nhaplidoxinnghiphep">Nhập lý do xin nghỉ</string>
    <string name="xinnghi1ngay">Xin nghỉ 1 ngày</string>
    <string name="songaynghikhac">Số ngày nghỉ khác</string>
    <string name="chonngaynghi">Chọn ngày nghỉ:</string>
    <string name="chon">Chọn</string>
    <string name="chonngaylamlai">Chọn ngày làm lại:</string>
    <string name="tieptuc">Tiếp tục</string>
    <string name="quaylai">Quay lại</string>
    <string name="capnhatthongtin">CẬP NHẬT THÔNG TIN</string>
    <string name="email">Email</string>
    <string name="trangthai">Trạng thái</string>
    <string name="capnhat">CẬP NHẬT</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
    <string name="thoigianbatdau">Thời gian bắt đầu</string>
    <string name="thoigianketthuc">Thời gian kết thúc</string>
    <string name="_1chitiet">1(Chi tiết)</string>
    <string name="dangchoduyet">Đang chờ duyệt</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="binhluan">Bình Luận</string>
    <string name="denngay">Đến ngày</string>
    <string name="ngay">Ngày</string>
    <string name="danhsachdangkynghiphep">Danh sách đăng kí nghỉ phép</string>
    <string name="baocaochamcongtheothangdangdanhsach">Báo cáo chấm công theo tháng dạng danh sách</string>
    <string name="baocaochamcongtheothangdanglich">Báo cáo chấm công theo tháng dạng lịch</string>
    <string name="lichsunghiphep">Lịch sử nghỉ phép</string>
    <string name="caidat">Cài đặt</string>
    <string name="thoat">Thoát</string>
    <string name="kiemduyetnghiphep">Kiểm duyệt nghỉ phép</string>
</resources>