<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:title="@string/capnhatthongtin" />
<!--            android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_attendance"
            android:title="@string/checkin" />
<!--            android:icon="@drawable/ic_menu_gallery"-->
        <item
            android:id="@+id/nav_attendance_history"
            android:title="@string/nhatkychamcong" />
        <item
            android:id="@+id/nav_list_register_for_leave"
            android:title="@string/danhsachdangkynghiphep" />
<!--            android:icon="@drawable/ic_menu_slideshow"-->
        <item
            android:id="@+id/nav_list_report"
            android:title="@string/baocaochamcongtheothangdangdanhsach" />
<!--            android:icon="@drawable/ic_menu_slideshow"-->
        <item
            android:id="@+id/nav_list_report_date"
            android:title="@string/baocaochamcongtheothangdanglich" />
<!--            android:icon="@drawable/ic_menu_slideshow"-->


        <item
            android:id="@+id/nav_vacation"
            android:title="@string/lichsunghiphep" />
<!--            android:icon="@drawable/ic_menu_manage"-->
        <item
            android:id="@+id/nav_setting"
            android:title="@string/caidat" />
        <item
            android:id="@+id/nav_createvacation"
            android:title="@string/xinnghiphep" />
        <!--            android:icon="@drawable/ic_exit_to_app_black_24dp"-->
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="Điểm danh" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="Điểm danh" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
