<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AttendanceHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TableRow android:background="#FFAE38"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/daymonth" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/giovao" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/giora" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/sogio" />
            </TableRow>
            <androidx.recyclerview.widget.RecyclerView
                android:padding="5dp"
                android:id="@+id/recyclerview_h"
                android:background="#F0F7F7">
            </androidx.recyclerview.widget.RecyclerView>
        </TableLayout>
    </LinearLayout>

</FrameLayout>