<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/testgoi"
    tools:context=".ui.fragment.CreateVacationFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="#46FF9800"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#FF9800"
                    android:text="@string/xinnghiphep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            //duoi li do
            <LinearLayout
                android:padding="5dp"
                android:background="@drawable/vien_linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/loainghiphep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:background="@drawable/vien_edittext"
                    android:id="@+id/spinnertype"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:spinnerMode="dropdown" />
                <TextView
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/lydo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:paddingLeft="10dp"
                    android:hint="@string/nhaplidoxinnghiphep"
                    android:id="@+id/edt_vacation_reason"
                    android:background="@drawable/vien_edittext"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
                <RadioGroup
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:checked="true"
                        android:id="@+id/radio1"
                        android:layout_weight="1"
                        android:text="@string/xinnghi1ngay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/radion"
                        android:text="@string/songaynghikhac"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:id="@+id/linearclickn"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000000"
                        android:layout_marginBottom="10dp"
                        android:text="Từ ngày:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_vacation_n_1"
                        android:text="chọn"
                        android:layout_marginBottom="5dp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="#000000"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="Đến ngày:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_vacation_n_2"
                        android:text="chọn"
                        android:layout_marginBottom="5dp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/linearclick1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000000"
                        android:layout_marginBottom="10dp"
                        android:text="@string/chonngaynghi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_vacation_1"
                        android:text="@string/chon"
                        android:layout_marginBottom="5dp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:textColor="#000000"
                    android:layout_marginBottom="10dp"
                    android:text="@string/chonngaylamlai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btn_vacation_return"
                    android:text="@string/chon"
                    android:layout_marginBottom="5dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btn_vacation_ok"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffffff"
                        android:background="#FABE68"
                        android:text="@string/tieptuc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_vacation_back"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/vien_edittext"
                        android:text="@string/quaylai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>