<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ListReportDateFragment">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/tvthongbao"
                android:visibility="gone"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="20sp"
                android:text="Bạn chưa đc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <TableRow android:background="#FFAE38"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/ngay" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/thoigianbatdau" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/thoigianketthuc" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/sogio" />
                </TableRow>
                <androidx.recyclerview.widget.RecyclerView
                    android:padding="5dp"
                    android:id="@+id/recyclerview_list_report_date"
                    android:background="#F0F7F7">
                </androidx.recyclerview.widget.RecyclerView>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>



</FrameLayout>