<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.InfoFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="15sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="25sp"
                android:text="@string/capnhatthongtin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="20dp"
                    android:text="@string/hovaten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shadow"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="#535353"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="20dp"
                    android:text="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shadow"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textWebEmailAddress"
                    android:textColor="#535353"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/chucvu"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:enabled="false"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:id="@+id/edt_role"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shadow"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="#535353"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="20dp"
                    android:text="@string/trangthai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:enabled="false"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:id="@+id/edt_status"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shadow"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColor="#535353"/>
            </LinearLayout>
            <Button
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/btnchangeinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shadow"
                android:text="@string/capnhat"
                android:textColor="#FFFFFF"
                android:textSize="18sp"/>
            <Button
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/btnchangepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_custom_changepass"
                android:text="@string/doimatkhau"
                android:textColor="#0C0C0C"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>