<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/logo" />
            // android:text="demo@gmail.com"

            <EditText
                android:id="@+id/edt_userlogin"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shadow"
                android:drawableLeft="@drawable/human_icon"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"

                android:textColor="#888888" />
            //android:text="123"
            <EditText
                android:id="@+id/edt_passlogin"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shadow"
                android:drawableLeft="@drawable/pass_icon"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nhapmatkhau"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#888888" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_shadow"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgotPassTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="120dp"
                android:clickable="true"
                android:text="@string/quenmatkhau"
                />

        </LinearLayout>

    </ScrollView>
</FrameLayout>